<resources>
    <string name="app_name">SQLiteCompany</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="val">Codigo: </string>
    <string name="URL">URL: </string>
    <string name="name">Nombre: </string>
    <string name="phone">Telefono: </string>
    <string name="email">Email: </string>
    <string name="servicio">Servicio: </string>
    <string name="clasificacion">Clasificación: </string>
    <string name="ins">Insert</string>
    <string name="act">Edit</string>
    <string name="elim">Delete</string>
    <string name="cons">Query</string>
</resources>
